--- a/admin-dashboard/src/App.css
+++ b/admin-dashboard/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+.location-icon {
+  --active: var(--grey-1100);
+  --color: var(--grey-1100);
+  --hover: var(--grey-1100);
+  --size: 20px;
+  mask-image: url("https://cdn.unstop.com/assets/icons/location_on_color.svg");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer-wrapper {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 40;
+  background-color: #ffffff;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.footer-hidden {
+  transform: translateY(100%);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.drawer {
+  z-index: 50;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  padding-bottom: 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+
+@media (min-width: 40rem) {
+  .footer-wrapper {
+    position: sticky;
+    transform: none !important;
   }
 }
